[gd_scene load_steps=7 format=3 uid="uid://bghtjfjyyka0b"]

[ext_resource type="Script" path="res://assets/scripts/characters/MeleeEnemy.gd" id="1_b1da3"]
[ext_resource type="Texture2D" uid="uid://bv6dabgpn7ioy" path="res://icon.svg" id="2_gg1mt"]
[ext_resource type="Script" path="res://assets/scripts/Health.gd" id="3_pngws"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_d3t2a"]
size = Vector2(28, 28)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nfy5k"]
size = Vector2(946, 60)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sjxws"]
size = Vector2(64, 40)

[node name="SmallGuy" type="CharacterBody2D"]
collision_mask = 3
script = ExtResource("1_b1da3")
roam_speed = 100.0
attack_speed = 150.0
attack = 1

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(1.14441e-05, 3.8147e-06)
scale = Vector2(0.216406, 0.208188)
texture = ExtResource("2_gg1mt")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_d3t2a")

[node name="RightWall" type="RayCast2D" parent="."]
target_position = Vector2(20, 0)
collision_mask = 128

[node name="LeftWall" type="RayCast2D" parent="."]
target_position = Vector2(-20, 0)
collision_mask = 128

[node name="RightGap" type="RayCast2D" parent="."]
position = Vector2(15, 11)
target_position = Vector2(0, 9)
collision_mask = 128

[node name="LeftGap" type="RayCast2D" parent="."]
position = Vector2(-15, 11)
target_position = Vector2(0, 9)
collision_mask = 128

[node name="DetectArea" type="Area2D" parent="."]
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectArea"]
shape = SubResource("RectangleShape2D_nfy5k")
debug_color = Color(0.684582, 0.501212, 7.70092e-07, 0.42)

[node name="AttackArea" type="Area2D" parent="."]
collision_mask = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
shape = SubResource("RectangleShape2D_sjxws")
debug_color = Color(0.983869, 0.12534, 3.85046e-07, 0.42)

[node name="Health" type="Node" parent="."]
script = ExtResource("3_pngws")

[node name="InvincibilityTimer" type="Timer" parent="Health"]
process_callback = 0
wait_time = 0.2

[node name="AttackTimer" type="Timer" parent="."]

[node name="DetectTimer" type="Timer" parent="."]
wait_time = 5.0

[node name="HealthBar" type="ProgressBar" parent="."]
modulate = Color(0.129412, 0.878431, 0, 1)
offset_left = -32.0
offset_top = -55.0
offset_right = 30.0
offset_bottom = -40.0
max_value = 6.0
show_percentage = false

[connection signal="body_entered" from="DetectArea" to="." method="_on_detect_area_body_entered"]
[connection signal="body_exited" from="DetectArea" to="." method="_on_detect_area_body_exited"]
[connection signal="body_entered" from="AttackArea" to="." method="_on_attack_area_body_entered"]
[connection signal="body_exited" from="AttackArea" to="." method="_on_attack_area_body_exited"]
[connection signal="timeout" from="Health/InvincibilityTimer" to="Health" method="_on_invincibility_timer_timeout"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
[connection signal="timeout" from="DetectTimer" to="." method="_on_detect_timer_timeout"]
